--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <!-- bootstrap stylesheet CDN integration -->
     <link
       rel="stylesheet"
@@ -11,17 +11,47 @@
       crossorigin="anonymous"
     />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ummah Charity</title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+
+    <!-- FontAwesome -->
+    <link
+      href="css/font-awesome.css"
+      media="screen"
+      rel="stylesheet"
+      type="text/css"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+
+    <!-- Select 2 -->
+    <link
+      href="css/select2.css"
+      media="screen"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <!-- Core CSS -->
+    <link
+      href="css/bootstrap.css"
+      media="screen"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
+
+    <!-- Animate.css -->
+    <link
+      href="css/animate.css"
+      media="screen"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <!-- Modernizr Library -->
+    <script src="js/libs/modernizr-3.6.0.min.js"></script>
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -32,20 +62,71 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <!-- <script type="text/javascript" src="FILL ME IN.js"></script> -->
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- Libs -->
+    <script src="js/libs/jquery-1.12.2.min.js"></script>
+    <script src="js/libs/jquery-ui-1.11.4.min.js"></script>
+    <script src="js/libs/bootstrap-3.3.6.min.js"></script>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- Placeholders -->
+    <script src="js/jquery.powerful-placeholder.min.js"></script>
+
+    <!-- Select2  -->
+    <script src="js/select2.full.min.js"></script>
+
+    <!-- InputMask -->
+    <script src="js/inputmask.min.js"></script>
+    <script src="js/jquery.inputmask.min.js"></script>
+
+    <!-- LightBox -->
+    <script src="js/jquery.swipebox.min.js"></script>
+
+    <!-- Owl Slider -->
+    <script src="js/owl.carousel.js"></script>
+
+    <!-- CarouFredSel -->
+    <script src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
+
+    <!-- MouseWheel -->
+    <script src="js/jquery.mousewheel.min.js"></script>
+
+    <!-- TouchSwipe -->
+    <script src="js/jquery.touchSwipe.min.js"></script>
+
+    <!-- ScrollBar -->
+    <script src="js/jquery.nicescroll.min.js"></script>
+
+    <!-- StickyKit -->
+    <script src="js/jquery.sticky-kit.min.js"></script>
+
+    <!-- TweenLite, used for smooth scrolling -->
+    <script src="js/TweenLite.min.js"></script>
+    <script src="js/ScrollToPlugin.min.js"></script>
+
+    <!-- Google Map -->
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyBsiIXmVIO8K_S-f6_Ln0AjnYdvc3ttx9U"></script>
+    <script src="js/jquery.gmap.min.js"></script>
+    <script src="js/gmap-style.js"></script>
+    <script src="js/gmap-init.js"></script>
+
+    <!-- Youtube Api -->
+    <script src="https://www.youtube.com/iframe_api"></script>
+
+    <!-- FroogaLoop for Vimeo  -->
+    <script src="../../f.vimeocdn.com/js/froogaloop2.min.js"></script>
+
+    <!-- Waves -->
+    <script src="js/waves.min.js"></script>
+
+    <!-- Object Fit PolyFill -->
+    <script src="js/ofi.browser.js"></script>
+
+    <!-- General Scripts -->
+    <script src="js/general.js"></script>
+    
   </body>
 </html>
