(progress) initial html/css to React conversion

--- a/index-data.html
+++ b/index-data.html
@@ -25,7 +25,7 @@
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage">
-
+<div class="app-body" data-component="AppBody">
 <!-- Page Loader -->
 <div class="page-loader" data-component="PageLoader">
 	<div class="preloader-wheel active">
@@ -922,7 +922,7 @@
 
 				<div class="col-md-3 col-sm-6">
 					<!-- Widget Recent Posts -->
-					<div class="widget-footer widget-posts">
+					<div class="widget-footer widget-posts" data-component="WidgetPosts">
 						<h4 class="widget-title">latest news</h4>
 
 						<article class="fly-article" itemscope itemtype="http://schema.org/Article">
@@ -950,7 +950,7 @@
 
 				<div class="col-md-3 col-sm-6">
 					<!-- Widget Twitter -->
-					<div class="widget-footer widget-twitter">
+					<div class="widget-footer widget-twitter" data-component="WidgetTwitter">
 						<h4 class="widget-title">twitter feed</h4>
 
 						<article class="tweet">
@@ -968,7 +968,7 @@
 
 				<div class="col-md-3 col-sm-6">
 					<!-- Widget Gallery -->
-					<div class="widget-footer widget-gallery">
+					<div class="widget-footer widget-gallery" data-component="WidgetGallery">
 						<h4 class="widget-title">gallery widget</h4>
 
 						<ul>
@@ -1010,7 +1010,7 @@
 <!--/ Footer -->
 
 <!-- JS Section -->
-
+</div>
 
 
 </body>
