--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   </head>
-  <body>
+  <body itemscope itemtype="http://schema.org/WebPage">
     <div id="root"></div>
     <!-- <script type="text/javascript" src="FILL ME IN.js"></script> -->
 
