(progress) hash links setup for events & contact us

--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
 <!--/ Page Loader -->
 
 <!-- Header -->
-<header id="header" class="header" itemscope itemtype="http://schema.org/WPHeader">
+<header id="header" class="header" itemscope itemtype="http://schema.org/WPHeader" data-component="NotFoundHeader">
 	<!-- Navigation Bar -->
 	<nav class="navigation-bar" data-become-sticky="600" data-no-placeholder>
 		<div class="container">
@@ -174,7 +174,7 @@
 <!--/ Header -->
 
     <!-- Header Image or Video -->
-    <section class="fly-header parallax overlay" style="background-image: url(images/temp/slide-7.jpg);">
+    <section class="fly-header parallax overlay" style="background-image: url(images/temp/slide-7.jpg);" data-component="NotFoundError">
         <div class="fly-header-content">
             <div class="page-subtitle">404</div>
             <h1 class="page-title">Error page</h1>
@@ -183,7 +183,7 @@
     <!--/ Header Image or Video -->
 
     <!-- Page -->
-    <div class="page-wrapper page-sidebar"><!-- TODO: additional classes are: .page-sidebar, .page-sidebar-left, .page-narrow -->
+    <div class="page-wrapper page-sidebar" data-component="NotFoundSideBar"><!-- TODO: additional classes are: .page-sidebar, .page-sidebar-left, .page-narrow -->
         <div class="container">
             <div class="row">
                 <!-- Content -->
@@ -229,7 +229,7 @@
     <!--/ Page -->
 
 <!-- Footer -->
-<footer class="footer" itemscope itemtype="http://schema.org/WPFooter">
+<footer class="footer" itemscope itemtype="http://schema.org/WPFooter" data-component="NotFoundFooter">
 	<div class="container">
 		<div class="footer-top">
 			<!-- Back To Top Button -->
