--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ummah Charity</title>
+    <title>Ummah Charities</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
