(refactor) change stateless class components to functional & general code clean-up

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <!-- bootstrap stylesheet CDN integration -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Umma Charities</title>
@@ -53,19 +46,10 @@
     <script src="js/libs/modernizr-3.6.0.min.js"></script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
   </head>
   <body itemscope itemtype="http://schema.org/WebPage">
     <div id="root"></div>
-    <!-- <script type="text/javascript" src="FILL ME IN.js"></script> -->
 
     <!-- Libs -->
     <script src="js/libs/jquery-1.12.2.min.js"></script>
