--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyBsiIXmVIO8K_S-f6_Ln0AjnYdvc3ttx9U"></script>
     <script src="js/jquery.gmap.min.js"></script>
     <script src="js/gmap-style.js"></script>
-    <script src="js/gmap-init.js"></script>
+    <!-- <script src="js/gmap-init.js"></script> -->
 
     <!-- Waves -->
     <script src="js/waves.min.js"></script>
@@ -102,7 +102,7 @@
     <script src="js/ofi.browser.js"></script>
 
     <!-- General Scripts -->
-    <script src="js/general.js"></script>
+    <!-- <script src="js/general.js"></script> -->
     
   </body>
 </html>
